--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,5 @@
 #
 # Copyright (c) 2017 Mateusz Loskot <mateusz at loskot dot net>
-# All rights reserved.
 #
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at
@@ -9,32 +8,37 @@
 message(STATUS "Configuring Boost.GIL core tests")
 
 foreach(name channel pixel pixel_iterator)
-  add_executable(gil_test_core_${name})
-  target_sources(gil_test_core_${name}
+  add_executable(gil_test_${name})
+  target_sources(gil_test_${name}
     PRIVATE
     ${_boost_gil_headers}
+    ${_boost_gil_test_headers}
     ${name}.cpp
     error_if.cpp)
-  target_link_libraries(gil_test_core_${name}
+  target_link_libraries(gil_test_${name}
     PRIVATE
     Boost::disable_autolinking
     Boost::filesystem
     Boost::unit_test_framework)
-  add_test(gil.tests.core.${name} gil_test_core_${name})
+  add_test(gil.tests.core.${name} gil_test_${name})
 endforeach()
 
-add_executable(gil_test_core_image)
-target_sources(gil_test_core_image
+add_executable(gil_test_image)
+target_sources(gil_test_image
   PRIVATE
   ${_boost_gil_headers}
+  ${_boost_gil_test_headers}
   error_if.cpp
   image.cpp
   sample_image.cpp)
-target_link_libraries(gil_test_core_image
+target_link_libraries(gil_test_image
   PRIVATE
   Boost::disable_autolinking
   Boost::filesystem
   Boost::unit_test_framework)
 add_test(gil.tests.core.image
-  gil_test_core_image
+  gil_test_image
   ${CMAKE_CURRENT_SOURCE_DIR}/gil_reference_checksums.txt)
+
+# New tests based on Boost.Test
+add_subdirectory(channel)
