--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,11 +110,13 @@ if(MSVC)
   add_definitions(-DNOMINMAX=1)
   add_definitions(-DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE=1)
 else()
+  # Assumes compilers which recognize GCC and clang speak
   add_compile_options(-pedantic)
+  add_compile_options(-fsanitize=undefined)
+  add_compile_options(-fstrict-aliasing)
   add_compile_options(-Wall)
   add_compile_options(-Wextra)
   add_compile_options(-Wstrict-aliasing)
-  add_compile_options(-fstrict-aliasing)
   add_compile_options(-Wconversion )
   add_compile_options(-Wsign-promo)
   add_compile_options(-Wfloat-equal)
