--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,10 @@ docker_gcc73: &docker_gcc73
   docker:
     - image: gcc:7.3
 
+docker_gcc81: &docker_gcc81
+  docker:
+    - image: gcc:8.1
+
 docker_clang39: &docker_clang39
   docker:
     - image: rferraro/cxx-clang:3.9
@@ -214,6 +218,13 @@ config_gcc73_cpp11_dbg: &config_gcc73_cpp11_dbg
   <<: *env_gcc_cpp11_dbg
 config_gcc73_cpp11_opt_speed: &config_gcc73_cpp11_opt_speed
   <<: *docker_gcc73
+  <<: *env_gcc_cpp11_opt_speed
+
+config_gcc81_cpp11_dbg: &config_gcc81_cpp11_dbg
+  <<: *docker_gcc81
+  <<: *env_gcc_cpp11_dbg
+config_gcc81_cpp11_opt_speed: &config_gcc81_cpp11_opt_speed
+  <<: *docker_gcc81
   <<: *env_gcc_cpp11_opt_speed
 
 config_clang39_cpp11_dbg: &config_clang39_cpp11_dbg
@@ -447,6 +458,14 @@ jobs:
     <<: *config_gcc73_cpp11_opt_speed
     <<: *steps_test_core
 
+  gcc81_11_core:
+    <<: *config_gcc81_cpp11_dbg
+    <<: *steps_test_core
+
+  gcc81_11_core_speed:
+    <<: *config_gcc81_cpp11_opt_speed
+    <<: *steps_test_core
+
   ### clang 3.9 ################################################################
   clang39_11_core:
     <<: *config_clang39_cpp11_dbg
@@ -600,6 +619,13 @@ workflows:
       - gcc73_11_core_speed:
           requires:
             - gcc73_11_core
+
+      - gcc81_11_core:
+          requires:
+            - bootstrap_gcc
+      - gcc81_11_core_speed:
+          requires:
+            - gcc81_11_core
 
       ### clang 3.9 ##########################################################
       - clang39_11_core:
