Add promote_integral metafunction
Copied from Boost.Geometry, including original tests, with some non-functional
modifications explained in the comments.
The utility can be used where it is important to avoid integer overflow.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,7 @@
 #
 message(STATUS "Configuring Boost.GIL core tests")
 
-foreach(name channel pixel pixel_iterator)
+foreach(name channel pixel pixel_iterator promote_integral)
   add_executable(gil_test_${name})
   target_sources(gil_test_${name}
     PRIVATE
