Add Boost.Build variants for UBSan-enabled builds
The build variants enable group of checks offered by clang
UndefinedBehaviorSanitizer detector.

Add sanitizers suppression file in .ci/blacklist.supp based on
copy of the file from Boost.Beast.

Update Travis CI:
  - Add .ci/build-and-test.sh script as handy proxy for b2 command.
  - Add build jobs for each of the three new UBSan variants.
  - Display COMPILER and VARIANT first as these two are most important
    details while inspecting the build matrix
    (TOOLSET can be derived from COMPILER).

--- a/.gitattributes
+++ b/.gitattributes
@@ -52,3 +52,6 @@ CMakeLists.txt      text eol=lf
 *.html              text
 *.txt               text
 *.yml               text
+
+# sanitizers suppression
+*.supp              text eol=lf
