--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ branches:
 env:
   global:
     - secure: "UHit2f6Hq2pkHvx8rfrQvFacYiQKVO3vrCbNuDi/VSAIzQjRnqCqE06y4vpXLMsXf62TvBeCBStIuI8g+HP8B+f39oGb/9Om+yIgN/yes47R4sLFKFbRiOS6sfCIefJp7Kx7GSFf81xWxStpIU4QaSsk8Dlt5xyurTWXFSde+lQ="
-
   matrix:
     - BOGUS_JOB=true
 
@@ -28,7 +27,7 @@ matrix:
     - env: BOGUS_JOB=true
   include:
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-5 CXXSTD=c++11 VARIANT=debug
+      env: COMPILER=g++-5 VARIANT=debug TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -37,7 +36,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-5 CXXSTD=c++11 VARIANT=release
+      env: COMPILER=g++-5 VARIANT=release TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -46,7 +45,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-6 CXXSTD=c++11 VARIANT=debug
+      env: COMPILER=g++-6 VARIANT=debug TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -55,7 +54,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-6 CXXSTD=c++11 VARIANT=release
+      env: COMPILER=g++-6 VARIANT=release TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -64,7 +63,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-7 CXXSTD=c++11 VARIANT=debug
+      env: COMPILER=g++-7 VARIANT=debug TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -73,7 +72,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=gcc COMPILER=g++-7 CXXSTD=c++11 VARIANT=release
+      env: COMPILER=g++-7 VARIANT=release TOOLSET=gcc CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -82,7 +81,7 @@ matrix:
             - ubuntu-toolchain-r-test
 
     - os: linux
-      env: TOOLSET=clang COMPILER=clang++-3.9 CXXSTD=c++11 VARIANT=debug
+      env: COMPILER=clang++-3.9 VARIANT=debug TOOLSET=clang CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -92,7 +91,7 @@ matrix:
             - llvm-toolchain-precise-3.9
 
     - os: linux
-      env: TOOLSET=clang COMPILER=clang++-3.9 CXXSTD=c++11 VARIANT=release
+      env: COMPILER=clang++-3.9 VARIANT=release TOOLSET=clang CXXSTD=c++11
       addons:
         apt:
           packages:
@@ -101,11 +100,41 @@ matrix:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.9
 
-    - os: osx
-      env: TOOLSET=clang COMPILER=clang++ CXXSTD=c++11 VARIANT=debug
+    - os: linux
+      env: COMPILER=clang++-5.0 VARIANT=ubsan_integer TOOLSET=clang CXXSTD=c++11 UBSAN_OPTIONS='print_stacktrace=1'
+      addons:
+        apt:
+          packages:
+          - clang-5.0
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-5.0
+
+    - os: linux
+      env: COMPILER=clang++-5.0 VARIANT=ubsan_undefined TOOLSET=clang CXXSTD=c++11 UBSAN_OPTIONS='print_stacktrace=1'
+      addons:
+        apt:
+          packages:
+          - clang-5.0
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-5.0
+
+    - os: linux
+      env: COMPILER=clang++-5.0 VARIANT=ubsan_nullability TOOLSET=clang CXXSTD=c++11 UBSAN_OPTIONS='print_stacktrace=1'
+      addons:
+        apt:
+          packages:
+          - clang-5.0
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-5.0
 
     - os: osx
-      env: TOOLSET=clang COMPILER=clang++ CXXSTD=c++11 VARIANT=release
+      env: COMPILER=clang++ VARIANT=debug TOOLSET=clang CXXSTD=c++11
+
+    - os: osx
+      env: COMPILER=clang++ VARIANT=release TOOLSET=clang CXXSTD=c++11
 
     - env: DOC=1
       addons:
@@ -135,25 +164,21 @@ script:
     if [ "$DOC" ]; then
       echo "using doxygen ;" > ~/user-config.jam
       ./b2 libs/gil/doc
-    else
-      echo "using $TOOLSET : : $COMPILER : <cxxflags>-std=$CXXSTD ;" > ~/user-config.jam
-      ./b2 libs/gil/test toolset=$TOOLSET variant=$VARIANT
-      ./b2 libs/gil/toolbox/test toolset=$TOOLSET variant=$VARIANT
-      ./b2 libs/gil/numeric/test toolset=$TOOLSET variant=$VARIANT
-      ./b2 libs/gil/io/test//simple toolset=$TOOLSET variant=$VARIANT
     fi
+  - |-
+    echo "using $TOOLSET : : $COMPILER : <cxxflags>-std=$CXXSTD ;" > ~/user-config.jam
+  - travis_retry libs/gil/.ci/build-and-test.sh
 
 after_success:
-# Upload docs only when building upstream.
-- |
-   if [ "$DOC" -a \
-        "$TRAVIS_REPO_SLUG" = "boostorg/gil" -a \
-        "$TRAVIS_PULL_REQUEST" = "false" ]; then
-     export GH_TOKEN
-     cd libs/gil
-     .ci/upload_docs.sh
+  # Upload docs only when building upstream.
+  - |
+    if [ "$DOC" -a \
+          "$TRAVIS_REPO_SLUG" = "boostorg/gil" -a \
+          "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      export GH_TOKEN
+      cd libs/gil
+      .ci/upload_docs.sh
    fi
-
 
 notifications:
   email:
