[cmake] Update FindBoost.cmake auto-download instructions [ci skip]
Add GIL_DISABLE_FINDBOOST_DOWNLAOD option (default=OFF).
Output values of Boost_INCLUDE_DIRS and BOOST_LIBRARY_DIRS
  - should help to know which Boost we are building GIL against.
Fix add_executable with empty sources list.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ option(GIL_BUILD_EXAMPLES "Build GIL examples" OFF) # FIXME: Switch to ON after 
 option(GIL_ENABLE_IO "Enable GIL IO in tests and examples (require libjpeg, libpng, libtiff)" ON)
 option(GIL_USE_BOOST_STAGE "Use Boost from current source tree and libraries from stage, unless BOOST_ROOT specified." ON)
 option(GIL_USE_CONAN "Use Conan to install dependencies" OFF)
+option(GIL_DISABLE_FINDBOOST_DOWNLOAD "Disable auto-download FindBoost.cmake for CMake <3.10" OFF)
 
 #-----------------------------------------------------------------------------
 # Dependency: Boost
@@ -25,10 +26,12 @@ option(GIL_USE_CONAN "Use Conan to install dependencies" OFF)
 # - look for default installation location
 # - look for location specified with BOOST_ROOT
 #-----------------------------------------------------------------------------
-if (CMAKE_VERSION VERSION_LESS 3.11)
-  # Latest FindBoost.cmake has likely been updated to detect Boost version not yet released
+if (CMAKE_VERSION VERSION_LESS 3.10 AND NOT GIL_DISABLE_FINDBOOST_DOWNLOAD)
   if (NOT EXISTS "${CMAKE_BINARY_DIR}/cmake/FindBoost.cmake")
+    message(STATUS "You are using CMake older than 3.10")
+    message(STATUS "FindBoost.cmake has likely been updated to detect newer or even not yet released Boost")
     message(STATUS "Downloading FindBoost.cmake from https://gitlab.kitware.com/cmake/ release branch")
+    message(STATUS "The auto-download can be disabled with GIL_DISABLE_FINDBOOST_DOWNLOAD=ON")
     file(DOWNLOAD
       "https://gitlab.kitware.com/cmake/cmake/raw/release/Modules/FindBoost.cmake"
       "${CMAKE_BINARY_DIR}/cmake/FindBoost.cmake")
@@ -55,7 +58,9 @@ if(MSVC)
   set(Boost_USE_STATIC_RUNTIME OFF)
 endif()
 
-find_package(Boost 1.67.0 REQUIRED COMPONENTS ${BOOST_COMPONENTS})
+find_package(Boost 1.65.0 REQUIRED COMPONENTS ${BOOST_COMPONENTS})
+message(STATUS "Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
+message(STATUS "Boost_LIBRARY_DIRS=${Boost_LIBRARY_DIRS}")
 
 # The boostorg/gil repository includes must come first,
 # before Boost includes from cloned Boost superproject or installed distribution.
