[cmake] Add targets for individual I/O format tests
Unify tests set with Jamfile and fabscript definitions.
Search for libtiffxx and tiffio.hxx with C++ stream
interface for TIFF - required by I/O.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,10 @@ if (GIL_ENABLE_IO)
     find_package(PNG)
     find_package(TIFF)
   endif()
+
+  # C++ stream interface for TIFF
+  find_path(_tiffxx_include_dir NAMES tiffio.hxx)
+  find_library(_tiffxx_library NAMES tiffxx)
 endif()
 
 #-----------------------------------------------------------------------------
