--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,6 @@ os:
   - linux
   - osx
 
-branches:
-  only:
-    - master
-    - develop
-    - doc
-    - ci
-
 env:
   global:
     - secure: "UHit2f6Hq2pkHvx8rfrQvFacYiQKVO3vrCbNuDi/VSAIzQjRnqCqE06y4vpXLMsXf62TvBeCBStIuI8g+HP8B+f39oGb/9Om+yIgN/yes47R4sLFKFbRiOS6sfCIefJp7Kx7GSFf81xWxStpIU4QaSsk8Dlt5xyurTWXFSde+lQ="
@@ -32,6 +25,10 @@ matrix:
         apt:
           packages:
             - g++-5
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -41,6 +38,10 @@ matrix:
         apt:
           packages:
             - g++-5
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -50,6 +51,10 @@ matrix:
         apt:
           packages:
             - g++-6
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -59,6 +64,10 @@ matrix:
         apt:
           packages:
             - g++-6
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -68,6 +77,10 @@ matrix:
         apt:
           packages:
             - g++-7
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -77,6 +90,10 @@ matrix:
         apt:
           packages:
             - g++-7
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
 
@@ -86,6 +103,10 @@ matrix:
         apt:
           packages:
             - clang-3.9
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.9
@@ -96,6 +117,10 @@ matrix:
         apt:
           packages:
             - clang-3.9
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.9
@@ -105,30 +130,42 @@ matrix:
       addons:
         apt:
           packages:
-          - clang-5.0
+            - clang-5.0
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
 
     - os: linux
       env: COMPILER=clang++-5.0 VARIANT=ubsan_nullability TOOLSET=clang CXXSTD=c++11 UBSAN_OPTIONS='print_stacktrace=1'
       addons:
         apt:
           packages:
-          - clang-5.0
+            - clang-5.0
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
 
     - os: linux
       env: COMPILER=clang++-5.0 VARIANT=ubsan_undefined TOOLSET=clang CXXSTD=c++11 UBSAN_OPTIONS='print_stacktrace=1'
       addons:
         apt:
           packages:
-          - clang-5.0
+            - clang-5.0
+            - libpng-dev
+            - libjpeg-dev
+            - libtiff5-dev
+            - libraw-dev
           sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-5.0
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
 
     - os: osx
       env: COMPILER=clang++ VARIANT=debug TOOLSET=clang CXXSTD=c++11
