[travis] Force installation of Sphinx 1.7.9 due to bug in 1.8.0
Fixes #136

--- a/.travis.yml
+++ b/.travis.yml
@@ -185,7 +185,7 @@ matrix:
 install:
   - |-
     if [ "$DOC" ]; then
-      pip install --user sphinx
+      pip install --user sphinx==1.7.9
     fi
   - cd ..
   - git clone -b master --depth 1 https://github.com/boostorg/boost.git boost-root
