--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[{CMakeLists.txt,CMakeSettings.json,*.cmake}]
+[{Jamfile*,CMakeLists.txt,CMakeSettings.json,*.cmake}]
 indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
