--- a/test/algorithm/CMakeLists.txt
+++ b/test/algorithm/CMakeLists.txt
@@ -6,10 +6,10 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 #
 foreach(name
-  collection
-  image_view_concepts)
+  for_each_pixel
+  std_fill)
   add_executable(gil_test_${name} "")
   target_sources(gil_test_${name} PRIVATE ${_boost_gil_headers} ${name}.cpp)
-  target_link_libraries(gil_test_${name} PRIVATE Boost::boost )
+  target_link_libraries(gil_test_${name} PRIVATE Boost::boost)
   add_test(gil.tests.core.${name} gil_test_${name})
 endforeach()
