[cmake] Add test/image_view to CMake configuration
[ci skip]

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,6 +40,6 @@ add_test(gil.tests.core.image
   gil_test_image
   ${CMAKE_CURRENT_SOURCE_DIR}/gil_reference_checksums.txt)
 
-# New tests based on Boost.Test
 add_subdirectory(algorithm)
 add_subdirectory(channel)
+add_subdirectory(image_view)
