Fix compile-time bugs subchroma_image.hpp definions
Add missing typename in mpl::if_ condition result.
Restore BOOST_CXX14_CONSTEXPR in boost::algorithm::clamp function
- apparently, GCC 5.5.0 does not compile it with C++11 constexpr.
Still not adding subchroma_image.cpp to toolbox test target
input sources due to run-time failure.

Depends on #176

--- a/toolbox/test/CMakeLists.txt
+++ b/toolbox/test/CMakeLists.txt
@@ -32,6 +32,9 @@ target_sources(gil_test_ext_toolbox
   lab_test.cpp
   pixel_bit_size.cpp
   rgb_to_luminance.cpp
+  # TODO: Add subchroma_image.cpp after fixing run-time failure,
+  #       for details see https://github.com/boostorg/gil/pull/164
+  #subchroma_image.cpp
   xyz_test.cpp)
 target_link_libraries(gil_test_ext_toolbox
   PRIVATE
