--- a/numeric/test/CMakeLists.txt
+++ b/numeric/test/CMakeLists.txt
@@ -8,17 +8,16 @@
 #
 message(STATUS "Boost.GIL: configuring Numeric extension tests")
 
-file(GLOB _headers
-  ${PROJECT_SOURCE_DIR}/include/boost/gil/extension/numeric/*.hpp)
-list(APPEND _headers ${_boost_gil_headers})
+foreach(name
+  numeric)
 
-add_executable(gil_test_ext_numeric "")
-target_sources(gil_test_ext_numeric
-  PRIVATE
-  ${_headers}
-  numeric.cpp)
-target_link_libraries(gil_test_ext_numeric
-  PRIVATE
-  Boost::disable_autolinking
-  Boost::unit_test_framework)
-add_test(gil.tests.ext.numeric gil_test_ext_numeric)
+  add_executable(test_ext_${name} "")
+  target_sources(test_ext_${name} PRIVATE ${name}.cpp)
+  target_link_libraries(test_ext_${name}
+    PRIVATE
+      gil_compile_options
+      gil_include_directories
+      Boost::disable_autolinking
+      Boost::unit_test_framework)
+  add_test(test.ext.${name} test_ext_${name})
+endforeach()
