--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,37 +7,39 @@
 #
 message(STATUS "Boost.GIL: configuring core tests")
 
-foreach(name channel pixel pixel_iterator promote_integral)
-  add_executable(gil_test_${name} "")
-  target_sources(gil_test_${name}
+foreach(name
+  channel
+  pixel
+  pixel_iterator
+  promote_integral)
+
+  add_executable(test_core_${name} "")
+  target_sources(test_core_${name} PRIVATE ${name}.cpp error_if.cpp)
+  target_link_libraries(test_core_${name}
     PRIVATE
-      ${_boost_gil_headers}
-      ${_boost_gil_test_headers}
-      ${name}.cpp
-      error_if.cpp)
-  target_link_libraries(gil_test_${name}
-    PRIVATE
+      gil_compile_options
+      gil_include_directories
       Boost::disable_autolinking
       Boost::filesystem
       Boost::unit_test_framework)
-  add_test(gil.tests.core.${name} gil_test_${name})
+  add_test(test.core.${name} test_core_${name})
 endforeach()
 
-add_executable(gil_test_image "")
-target_sources(gil_test_image
+add_executable(test_core_image "")
+target_sources(test_core_image
   PRIVATE
-    ${_boost_gil_headers}
-    ${_boost_gil_test_headers}
     error_if.cpp
     image.cpp
     sample_image.cpp)
-target_link_libraries(gil_test_image
+target_link_libraries(test_core_image
   PRIVATE
+    gil_compile_options
+    gil_include_directories
     Boost::disable_autolinking
     Boost::filesystem
     Boost::unit_test_framework)
-add_test(gil.tests.core.image
-  gil_test_image
+add_test(test.core.image
+  test_core_image
   ${CMAKE_CURRENT_SOURCE_DIR}/gil_reference_checksums.txt)
 
 add_subdirectory(algorithm)
