Update CMakeSettings.json to build examples [ci skip]

--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -19,9 +19,10 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "Boost_COMPILER", "value": "-vc141" },
+        { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_ENABLE_FINDBOOST_DOWNLOAD", "value": "ON" },
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        { "name": "GIL_USE_CONAN", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" }
       ]
     },
     {
@@ -35,9 +36,10 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "Boost_COMPILER", "value": "-vc141" },
+        { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_ENABLE_FINDBOOST_DOWNLOAD", "value": "ON" },
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        { "name": "GIL_USE_CONAN", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" }
       ]
     },
     {
@@ -51,9 +53,9 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "Boost_COMPILER", "value": "-vc141" },
         { "name": "GIL_ENABLE_FINDBOOST_DOWNLOAD", "value": "ON" },
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        { "name": "GIL_USE_CONAN", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" }
       ]
     },
     {
@@ -67,9 +69,9 @@
       "buildCommandArgs": "-v",
       "ctestCommandArgs": "",
       "variables": [
-        { "name": "Boost_COMPILER", "value": "-vc141" },
         { "name": "GIL_ENABLE_FINDBOOST_DOWNLOAD", "value": "ON" },
-        { "name": "GIL_USE_CONAN", "value": "ON" }
+        { "name": "GIL_USE_CONAN", "value": "ON" },
+        { "name": "GIL_BUILD_EXAMPLES", "value": "ON" }
       ]
     },
     {
